[metadata]
version = 0.0.4
name = apinator-databricks
description = APInator binding to Databricks API
author = Rearc Data
author_email = data@rearc.io

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rearc-data/apinator-databricks

project_urls =
    Bug Tracker = https://github.com/rearc-data/apinator-databricks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
where = .
